Catching non es6 browser

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
       </div>
     </div>
 
+    <script>
+      try       { eval("() => { return }") }
+      catch (e) { document.body.innerHTML = "<h1>Please open this page in a browser that supports ES6</h1>" }
+    </script>
     <script src="kickstart.js"></script>
     <script id="contacts">
       var groups = [
